@@ -43,6 +43,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #if TORRENT_ABI_VERSION == 1
 #include "libtorrent/read_resume_data.hpp"
 #include "libtorrent/lazy_entry.hpp"
+#include "libtorrent/magnet_uri.hpp"
 #endif
 
 using libtorrent::aux::session_impl;
@@ -356,6 +357,14 @@ namespace {
 		{
 			if (atp.file_priorities.empty())
 				atp.file_priorities = resume_data.file_priorities;
+		}
+
+		if (atp.info_hash.is_all_zeros()
+			&& string_begins_no_case("magnet:", atp.url.c_str()))
+		{
+			error_code err;
+			parse_magnet_uri(atp.url, atp, err);
+			if (!err) atp.url.clear();
 		}
 	}
 
