@@ -1,3 +1,5 @@
+
+	* improve backwards compatibility with loading magnet link resume files
 	* fix bind-to-device for tracker announces and UPnP
 	* rename peer_tos setting to peer_dscp
 	* fix bdecode support for large strings (>= 100 MB)
